--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         <h1>请选择您的部门</h1>
         <select id="departmentSelect">
             <option value="">--请选择--</option>
-            <option value="Power Distribution/index.html">配电</option>
-            <option value="Substation/index.html">变电</option>
-            <option value="Wiring/index.html">线路</option>
+            <option value="PowerDistribution/">配电</option>
+            <option value="Substation/">变电</option>
+            <option value="Wiring/">线路</option>
         </select>
         <button onclick="redirectToDepartment()">确定</button>
     </div>
